@@ -4,7 +4,6 @@ import com.alkemy.wallet.model.dto.request.UserRequestDto;
 import com.alkemy.wallet.model.dto.response.UserResponseDto;
 import com.alkemy.wallet.model.entity.Role;
 import com.alkemy.wallet.model.entity.User;
-import com.alkemy.wallet.model.dto.response.list.UserListResponseDto;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -52,9 +51,7 @@ public class UserMapper {
         return entity2Return;
     }
 
-    public UserListResponseDto entityList2DtoList(List<User> entityList) {
-        return UserListResponseDto.builder()
-                .users(entityList.stream().map(this::entity2Dto).collect(Collectors.toList()))
-                .build();
+    public List<UserResponseDto> entityList2DtoList(List<User> entityList) {
+        return entityList.stream().map(this::entity2Dto).toList();
     }
 }
